GCM Store: Fix invalid argument errors

Opening the GCM leveldb database resulted in a high rate of "does not
exist (create_if_missing is false)" invalid argument errors, since the
GCM Store was incorrectly considering the database to already exist if
its directory exists, when actually the directory sometimes continues
to exist after the database is destroyed.

This is expected to significantly reduce the following UMA buckets:
- GCM.Database.Open "Invalid Argument" percent (from ~20% to < 1%)
- GCM.LoadStatus "Store open failed" percent (from ~10% to < 1%)
- GCM.ResetStore "Infinite store reset" count (from ~10% of GCM.Database.Open
  count to < 1%)

BUG=650254

Review-Url: https://codereview.chromium.org/2380003002
Cr-Commit-Position: refs/heads/master@{#421957}

Former-commit-id: 6d6c7809c0fff72b92a8038b7d65909b7449d3da